* Makefile.in: Rebuilt. 	* Makefile.am (ordinary_java_source_files): Added 	SocketAddress.java, InetSocketAddress.java. 	* java/net/PortUnreachableException.java: Merged with Classpath. 	* java/net/SocketTimeoutException.java: Likewise. 	* java/net/URISyntaxException.java: Likewise. 	* java/net/SocketAddress.java: New class from Classpath. 	* java/net/InetSocketAddress.java: Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56494 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -1886,6 +1886,7 @@ java/net/DatagramSocketImpl.java \
 java/net/FileNameMap.java \
 java/net/HttpURLConnection.java	\
 java/net/InetAddress.java \
+java/net/InetSocketAddress.java \
 java/net/JarURLConnection.java \
 java/net/MalformedURLException.java \
 java/net/MulticastSocket.java \
@@ -1898,6 +1899,7 @@ java/net/PortUnreachableException.java \
 java/net/ProtocolException.java	\
 java/net/ServerSocket.java \
 java/net/Socket.java \
+java/net/SocketAddress.java \
 java/net/SocketException.java \
 java/net/SocketImpl.java \
 java/net/SocketImplFactory.java	\
