--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2139,8 +2139,8 @@ $(BUILD_PREFIX_1)errors.o: errors.c $(HCONFIG_H) $(SYSTEM_H) errors.h
 	sed -e 's/config[.]h/hconfig.h/' $(srcdir)/errors.c > $(BUILD_PREFIX)errors.c
 	$(HOST_CC) -c $(HOST_CFLAGS) $(HOST_CPPFLAGS) $(INCLUDES) $(BUILD_PREFIX)errors.c $(OUTPUT_OPTION)
 
-$(BUILD_PREFIX_1)varray.o: varray.c $(HCONFIG_H) $(SYSTEM_H) varray.h $(RTL_H) \
-  $(TREE_H) bitmap.h errors.h
+$(BUILD_PREFIX_1)varray.o: varray.c $(HCONFIG_H) $(SYSTEM_H) varray.h \
+  $(RTL_H) $(GGC_H) $(TREE_H) bitmap.h errors.h
 	rm -f $(BUILD_PREFIX)varray.c
 	sed -e 's/config[.]h/hconfig.h/' $(srcdir)/varray.c > \
 		$(BUILD_PREFIX)varray.c
