acinclude.m4 (GLIBCPP_CONFIGURE_TESTSUITE): Set GLIBCPP_BUILD_ABI_CHECK based on cross compiling, build, host variables.
2002-08-25  Benjamin Kosnik  <bkoz@redhat.com>

	* acinclude.m4 (GLIBCPP_CONFIGURE_TESTSUITE): Set
	GLIBCPP_BUILD_ABI_CHECK based on cross compiling, build, host
	variables.
	* aclocal.m4: Regenerate.
	* testsuite/Makefile.am (noinst_PROGRAMS): Make conditional on
	native compiling.

From-SVN: r56569

--- a/libstdc++-v3/testsuite/Makefile.in
+++ b/libstdc++-v3/testsuite/Makefile.in
@@ -159,13 +159,13 @@ INCLUDES = \
 	-nostdinc++ \
 	@GLIBCPP_INCLUDES@ @LIBSUPCXX_INCLUDES@ @TOPLEVEL_INCLUDES@ 
 
-
-noinst_PROGRAMS = abi_check
+@GLIBCPP_BUILD_ABI_CHECK_TRUE@noinst_PROGRAMS = @GLIBCPP_BUILD_ABI_CHECK_TRUE@abi_check
+@GLIBCPP_BUILD_ABI_CHECK_FALSE@noinst_PROGRAMS = 
 abi_check_SOURCES = abi_check.cc
 mkinstalldirs = $(SHELL) $(top_srcdir)/../mkinstalldirs
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
-noinst_PROGRAMS =  abi_check$(EXEEXT)
+@GLIBCPP_BUILD_ABI_CHECK_FALSE@noinst_PROGRAMS = 
 PROGRAMS =  $(noinst_PROGRAMS)
 
 
